# cc-cache-shim

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
cc_cache_shim/: __init__.py  proxy.py
examples/: cc-cache-shim.service
hooks/: strip_billing_hook.py
tests/: test_proxy.py
